# OCCT_Bottle_Tutorial

./: CMakeLists.txt  MakeBottle.cpp  Makefile  README.md  main.cpp
